--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>
     Hello world, I am 2652142
 </h1>
-    <a href="file:///home/vmuser/Desktop/SDlab2/2652142-lab2.html"> My Portfolio Website</a>
+    <a href="2652142-lab2.html"> My Portfolio Website</a>
